--- a/shake.html
+++ b/shake.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Игра Змия</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- This is static HTML file, only label at this point-->
-     <!--THE SHAKE WILL BE HERE-->
+    <h1>Игра Змия</h1>
+    <div id="game-board"></div>
+    <script src="script.js"></script>
 </body>
 </html>
